<resources>
    <string name="app_name">Android-Java-CustomListSample</string>
    <string name="title_list">メモ一覧</string>
    <string name="title_detail">詳細</string>
    <string name="title">タイトル</string>
    <string name="memo_contents">概要</string>
    <string name="dialog_title">操作確認</string>
    <string name="dialog_msg">操作を選択してください。</string>
    <string name="detail">詳細</string>
    <string name="cancel">キャンセル</string>
    <string name="delete">削除</string>
    <string name="back">一覧</string>


    <string name="price_en">¥</string>
    <string name="price">価格</string>
    <string name="release">発売日</string>
    <string name="author">著者</string>
    <string name="asin">ASIN</string>
    <string name="publisher">出版社</string>
    <string name="url">購入リンク</string>
</resources>