<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textColor="#000"
        android:maxLines ="2"
        android:ellipsize="end"
        android:paddingTop="15dp"
        android:paddingStart="15dp"
        android:paddingBottom="10dp"
        android:paddingEnd="10dp"


        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="105dp"
                    android:layout_height="wrap_content"
                    android:paddingStart="15dp"
                    android:paddingBottom="5dp"
                    android:textColor="#000"
                    android:textSize="18sp"
                    android:text="@string/detail" />


            </LinearLayout>





            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:paddingStart="15dp"
                    android:text="@string/author"
                    android:textColor="#000" />

                <TextView
                    android:id="@+id/tvAuthor"
                    android:layout_width="105dp"
                    android:layout_height="wrap_content"
                    android:text="TextView" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:paddingStart="15dp"
                    android:textColor="#000"
                    android:text="@string/asin" />

                <TextView
                    android:id="@+id/tvAsin"
                    android:layout_width="105dp"
                    android:layout_height="wrap_content"
                    android:text="TextView" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:paddingStart="15dp"
                    android:textColor="#000"
                    android:text="@string/publisher" />

                <TextView
                    android:id="@+id/tvPublisher"
                    android:layout_width="105dp"
                    android:layout_height="wrap_content"
                    android:text="TextView" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:paddingStart="15dp"
                    android:textColor="#000"
                    android:text="@string/release" />

                <TextView
                    android:id="@+id/tvRelease"
                    android:layout_width="105dp"
                    android:layout_height="wrap_content"
                    android:text="TextView" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:paddingStart="15dp"
                    android:textColor="#000"
                    android:text="@string/price" />

                <TextView
                    android:id="@+id/tvPrice"
                    android:layout_width="105dp"
                    android:layout_height="wrap_content"
                    android:text="TextView" />
            </LinearLayout>


        </LinearLayout>

        <ImageView
            android:id="@+id/ivThumb"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:paddingEnd="10dp"
            tools:srcCompat="@tools:sample/avatars" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:text="@string/url" />

        <TextView
            android:id="@+id/tvUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="15dp"
        android:textColor="#000"
        android:textSize="18sp"
        android:text="@string/memo_contents" />



    <TextView
        android:id="@+id/tvSummary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:minLines="2"
        android:text="TextView"
        android:paddingStart="16dp"
        android:paddingBottom="5dp"
        android:paddingEnd="10dp"
        android:scrollbars="vertical"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back" />


</LinearLayout>